# diasekovaltchukadv

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Caddyfile  Caddyfile.dev  Dockerfile  Jenkinsfile  README.md  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vitest.config.js  vitest.config.ts
.github/workflows/: tests.yml
backend/: captcha.py  contact.py  main.py  messages.py
diasekovaltchukadv/: Dockerfile  pyvenv.cfg  requirements.txt
diasekovaltchukadv/Flask/home/: index.html
diasekovaltchukadv/Scripts/: activate  activate.bat
diasekovaltchukadv/src/: index.html  main.py
diasekovaltchukadv/src/templates/: index.html
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  analytics.ts  api.ts  captchaProviders.ts  global.d.ts  main.tsx  messages.ts  phone.ts  styles.css  types.ts  validation.ts
frontend/src/components/: CaptchaChallenge.tsx  ContactForm.tsx  ContactSection.tsx  Navigation.tsx  StaticSections.tsx  Turnstile.tsx  WhatsAppLink.tsx
frontend/tests/: api-analytics.test.ts  app.test.tsx  captcha-main.test.tsx  contact-form.test.tsx  helpers.ts  phone-validation.test.ts  setup.ts  turnstile-main.test.tsx
scripts/: install_hooks.ps1  run_tests.py  test.ps1  test.sh
src/: contact.py  main.py  turnstile.py
src/static/css/: style.css
src/static/js/: captcha.js  mask.js  script.js  scroll.js
src/templates/: index.html
src/templates/partials/: about.html  contact.html  head.html  hero.html  (+4 more)
tests/: test_backend.py  test_main.py
tests/e2e/: site.spec.js
tests/frontend/: captcha.test.js  mask.test.js  scroll.test.js
(+4 files in other folders)
