[project]
name = "diasekovaltchukadv"
version = "1.0.0"
description = "Site institucional Dias Kovaltchuk Advogadas Associadas"
authors = [{ name = "Henrique Buzin" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "blinker==1.6.2",
    "click==8.1.3",
    "colorama==0.4.6",
    "flask==2.2.3",
    "flask-mail==0.9.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.2",
    "requests==2.32.5",
    "werkzeug==2.2.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
coverage = "7.10.7"
flake8 = "7.3.0"
isort = "6.0.1"
pre-commit = "4.3.0"

[tool.black]
line-length = 120
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
