[project]
name = "diasekovaltchukadv"
version = "1.0.0"
description = "Site institucional Dias Kovaltchuk Advogadas Associadas"
authors = [{ name = "Henrique Buzin" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "blinker==1.9.0",
    "click==8.4.2",
    "colorama==0.4.6",
    "flask==3.1.3",
    "flask-mail==0.10.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "requests==2.34.2",
    "werkzeug==3.1.8",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "26.5.1"
coverage = "7.15.2"
flake8 = "7.3.0"
isort = "8.0.1"
pre-commit = "4.6.0"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=2.4.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
